--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,6 +12,8 @@ html,
 body {
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+	scroll-behavior: smooth;
 }
 
 a {
@@ -22,4 +24,45 @@ a {
 button {
 	border: none;
 	background-color: transparent;
+}
+
+:root {
+	--primary-color: #f5f5f5;
+	--secondary-color: #1f1f1f;
+	--tertiary-color: #848484;
+}
+
+@include mobile {
+	:root {
+		--H1-300: #{$H1-300-390};
+		--H1-500: #{$H1-500-390};
+		--Tag-300: #{$Tag-300-390};
+		--Tag-400: #{$Tag-400-390};
+		--Paragraph: #{$Paragraph-390};
+
+		--screen-padding: 20px;
+	}
+}
+@include tablet {
+	:root {
+		--H1-300: #{$H1-300-834};
+		--H1-500: #{$H1-500-834};
+		--Tag-300: #{$Tag-300-834};
+		--Tag-400: #{$Tag-400-834};
+		--Paragraph: #{$Paragraph-834};
+		--screen-padding: 70px;
+	}
+}
+@include desktopSmall {
+	:root {
+		--H1-300: #{$H1-300-1440};
+		--H1-500: #{$H1-500-1440};
+		--Tag-300: #{$Tag-300-1440};
+		--Tag-400: #{$Tag-400-1440};
+		--Paragraph: #{$Paragraph-1440};
+	}
+}
+@include desktop {
+	:root {
+	}
 }
