--- a/styles/abstract/values/_fonts.scss
+++ b/styles/abstract/values/_fonts.scss
@@ -13,5 +13,5 @@ $Paragraph-834: normal 300 1rem/150% "IBM Plex Sans", sans-serif;
 $H1-300-390: normal 300 1.5rem/150% "IBM Plex Sans", sans-serif;
 $H1-500-390: normal 500 1.5rem/150% "IBM Plex Sans", sans-serif;
 $Tag-300-390: normal 300 0.75rem/100% "IBM Plex Sans", sans-serif;
-$Tag-400-390: normal 400 0.875/100% "IBM Plex Sans", sans-serif;
+$Tag-400-390: normal 400 0.875rem/100% "IBM Plex Sans", sans-serif;
 $Paragraph-390: normal 300 1rem/150% "IBM Plex Sans", sans-serif;
