--- a/components/FrontFace/styles.module.scss
+++ b/components/FrontFace/styles.module.scss
@@ -26,6 +26,10 @@
 
 				font: var(--H1-300);
 				color: var(--secondary-color);
+
+				span {
+					font-weight: 500;
+				}
 			}
 
 			.quick_intro {
