--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,6 +14,7 @@ body {
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
 	scroll-behavior: smooth;
+	background-color: var(--primary-color);
 }
 
 a {
@@ -26,10 +27,15 @@ button {
 	background-color: transparent;
 }
 
-:root {
+.light {
 	--primary-color: #f5f5f5;
 	--secondary-color: #1f1f1f;
 	--tertiary-color: #848484;
+}
+.dark {
+	--primary-color: #141414;
+	--secondary-color: #f5f5f5;
+	--tertiary-color: #787878;
 }
 
 @include mobile {
