--- a/components/Footer/styles.module.scss
+++ b/components/Footer/styles.module.scss
@@ -35,15 +35,14 @@
 					cursor: pointer;
 
 					a {
-						display: flex;
-						align-items: center;
+						@include flex-center;
 					}
 
 					.arrow_icon {
-						background-image: var(--arrow-icon-url);
 						width: var(--arrow-icon-width);
 						aspect-ratio: 1;
 						margin-left: 0.5rem;
+						background-image: var(--arrow-icon-url);
 					}
 				}
 			}
