--- a/components/ThemeButton/styles.module.scss
+++ b/components/ThemeButton/styles.module.scss
@@ -5,16 +5,15 @@
 		position: fixed;
 		top: height(90);
 		right: var(--screen-padding);
-		// left: calc(100vw - var(--screen-padding));
-		width: 40px;
 
+		width: 40px;
 		z-index: 2;
+		// mix-blend-mode: difference;
 
 		p {
 			color: var(--secondary-color);
 			font: var(--Tag-300);
 			font-weight: 400;
-			mix-blend-mode: difference;
 		}
 	}
 }
