--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -36,6 +36,10 @@ button {
 	--primary-color: #141414;
 	--secondary-color: #f5f5f5;
 	--tertiary-color: #787878;
+
+	img {
+		filter: brightness(0.8) contrast(1.2);
+	}
 }
 
 @include mobile {
