--- a/components/ActivityCard/styles.module.scss
+++ b/components/ActivityCard/styles.module.scss
@@ -50,17 +50,19 @@
 				}
 			}
 			.image {
+				display: block;
 				margin-right: auto;
-				width: 100%;
 				margin-top: 3.5rem;
+
+				height: height(45);
+				width: 92%;
+				min-width: min(calc(100% - 20px), 370px);
+				max-width: 764px;
 
 				.image_container {
 					position: relative;
-
-					height: height(45);
-					width: 92%;
-					min-width: min(calc(100% - 20px), 370px);
-					max-width: 764px;
+					width: 100%;
+					height: 100%;
 				}
 			}
 		}
@@ -77,11 +79,9 @@
 		.container .image {
 			margin-top: 5rem;
 
-			.image_container {
-				width: 87.5%;
-				min-width: 764px;
-				max-width: 1260px;
-			}
+			width: 87.5%;
+			min-width: 764px;
+			max-width: 1260px;
 		}
 	}
 }
