--- a/components/Footer/styles.module.scss
+++ b/components/Footer/styles.module.scss
@@ -7,7 +7,7 @@
 		--intro-container-min-width: none;
 		--intro-container-grid-flow: row;
 
-		--copy-container-min-width: 220px;
+		--item-container-min-width: 220px;
 		--copy-icon-width: 16px;
 		--arrow-icon-width: 16px;
 
@@ -76,40 +76,40 @@
 								grid-auto-flow: row;
 								row-gap: 0.75rem;
 
+								width: 190px;
+
 								a,
 								p {
 									font: var(--Tag-300);
 									color: var(--secondary-color);
 									max-width: fit-content;
 								}
-							}
-							.copy_container {
-								@include flex-center;
-								min-width: var(--copy-container-min-width);
-								cursor: pointer;
 
-								// p {
-								// 	white-space: nowrap;
-								// }
+								.copy_container {
+									@include flex-center;
+									width: var(--item-container-min-width);
+									cursor: pointer;
 
-								.copy_symbol {
-									position: relative;
-									width: var(--copy-icon-width);
-									min-width: var(--copy-icon-width);
-									aspect-ratio: 1;
-									margin-left: 0.2rem;
+									.copy_symbol {
+										position: relative;
 
-									opacity: 0;
-									transition: opacity 0.1s ease;
-								}
+										width: var(--copy-icon-width);
+										min-width: var(--copy-icon-width);
+										aspect-ratio: 1;
+										margin-left: 0.2rem;
 
-								&:hover .copy_symbol {
-									opacity: 1;
+										opacity: 0;
+										transition: opacity 0.1s ease;
+									}
+
+									&:hover .copy_symbol {
+										opacity: 1;
+									}
 								}
 							}
-
 							.link {
 								width: 164px;
+								min-width: fit-content;
 								grid-auto-flow: column;
 								grid-template-rows: 1fr 1fr 1fr;
 							}
@@ -142,7 +142,7 @@
 	.app_footer {
 		--copy-icon-width: 21px;
 		--arrow-icon-width: 24px;
-		--copy-container-min-width: 250px;
+		--item-container-min-width: 250px;
 
 		> .container {
 			padding-top: 144px;
