--- a/components/FrontFace/styles.module.scss
+++ b/components/FrontFace/styles.module.scss
@@ -25,7 +25,7 @@
 				padding: 1rem 0;
 
 				font: var(--H1-300);
-				color: var(--secondary-color);
+				color: var(--about-color);
 
 				b {
 					font-weight: 500;
@@ -49,8 +49,8 @@
 						h2 {
 							font: var(--Tag-400);
 							font-weight: normal;
-							color: var(--tertiary-color);
 							text-transform: uppercase;
+							color: var(--secondary-color);
 						}
 
 						.items {
@@ -64,7 +64,7 @@
 								a,
 								p {
 									font: var(--Tag-300);
-									color: var(--secondary-color);
+									color: var(--tertiary-color);
 									max-width: 190px;
 								}
 							}
@@ -73,6 +73,10 @@
 								width: 164px;
 								grid-auto-flow: column;
 								grid-template-rows: 1fr 1fr 1fr;
+
+								a:hover {
+									color: var(--secondary-color);
+								}
 							}
 						}
 					}
