--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -28,13 +28,15 @@ button {
 }
 
 .light {
+	--about-color: #1f1f1f;
 	--primary-color: #f5f5f5;
-	--secondary-color: #1f1f1f;
+	--secondary-color: #5f5f5f;
 	--tertiary-color: #848484;
 }
 .dark {
+	--about-color: #f5f5f5;
 	--primary-color: #141414;
-	--secondary-color: #f5f5f5;
+	--secondary-color: #a5a5a5;
 	--tertiary-color: #787878;
 
 	img {
